# esp_8_bit_for_narya

./: .gitignore  README.md  Rakefile  THIRD_PARTY_NOTICES.md
core/: CMakeLists.txt  Rakefile  partitions.csv  sdkconfig.defaults
core/main/: CMakeLists.txt  idf_component.yml  main.cpp
core/main/audio/: audio_i2s.h
core/main/emu/: emu.cpp  emu.h  emu_anemoia.cpp  emu_nofrendo.cpp  narya_hid.h
core/main/emu/anemoia/: apu2A03.cpp  apu2A03.h  bus.cpp  bus.h  cartridge.cpp  cartridge.h  cpu6502.cpp  cpu6502.h  mapper.cpp  mapper.h  narya_compat.cpp  narya_compat.h  ppu2C02.cpp  ppu2C02.h
core/main/emu/anemoia/mappers/: mapper000.cpp  mapper000.h  mapper001.h  mapper002.cpp  mapper002.h  mapper003.cpp  mapper003.h  mapper004.cpp  mapper069.cpp
core/main/menu/: glcdfont.h  rom_menu.cpp  rom_menu.h
core/main/rom_store/: rom_store.c  rom_store.h
core/main/transport/: hid_uart.c  hid_uart.h
core/main/video/: video_out.cpp  video_out.h
core/tools/: build_roms.py
doc/: porting_plan.md
hid/: CMakeLists.txt  Rakefile  partitions.csv  sdkconfig.defaults
hid/main/: CMakeLists.txt  idf_component.yml  main.c
hid/main/include/: narya_pin_assign.h
hid/main/transport/: hid_uart.c  hid_uart.h
hid/main/usb/: usb_gamepad.c  usb_gamepad.h
